fixed z-index in plans section

--- a/assets/sass/layout/_plans.scss
+++ b/assets/sass/layout/_plans.scss
@@ -11,6 +11,7 @@
     padding-top: 181px;
     padding-bottom: 140px;
     position: relative;
+    z-index: 2;
   }
 
   .plans-description-header {
@@ -37,7 +38,7 @@
     display: flex;
     justify-content: center;
     position: relative;
-
+    z-index: 2;
   }
 
   .plans-type-cover {
